--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,4 @@
-<footer class='mt-16 w-full sm:mt-4'>
+<footer class='w-full'>
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200' aria-hidden='true' role='presentation'>
     <path
       class='scale-y-75 text-slate-200 dark:text-slate-800'
