chore: replace contact page avatar

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -4,8 +4,8 @@ import Breadcrumb from '@/components/breadcrumb.astro';
 import { Icon } from 'astro-icon/components';
 import { Image } from 'astro:assets';
 import Button from '@/components/ui/button.astro';
-import Avatar from '@/assets/ghibli-avatar.png';
-import WinterAvatar from '@/assets/ghibli-avatar-santa.png';
+import Avatar from '@/assets/avatar.png';
+import WinterAvatar from '@/assets/avatar-santa.png';
 ---
 
 <Layout
