--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -152,9 +152,10 @@ const projects = [
       <h1 class='text-4xl font-extrabold tracking-tight lg:text-5xl'>Projects</h1>
       <p class='text-base-content max-w-[750px] text-lg leading-relaxed'>
         As a developer who loves exploring new technologies, these projects represent my journey of continuous learning
-        and innovation. From Websites to AI-powered tools, each project is crafted with <span class='highlight'
+        and innovation.
+        <!-- From Websites to AI-powered tools, each project is crafted with <span class='highlight'
           >passion for clean code</span
-        > and <span class='highlight'>exceptional user experience</span>.
+        > and <span class='highlight'>exceptional user experience</span>. -->
       </p>
 
       <div id='project-filters' aria-label='Project categories'>
