chore: update home/about/resume

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -218,7 +218,7 @@ const funFacts = [
           </p>
 
           <p>
-            With a background in <span class='highlight'>Computer Science</span>, I've focused on mastering modern web
+            With a <span class='highlight'>degree in Computer Science</span>, I've focused on mastering modern web
             development and creating solutions that make a difference. From browser extensions to full-stack
             applications, I approach each project as an opportunity to innovate and grow.
           </p>
