--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import LaptopAnimate from '@/assets/laptop-animate.svg';
         I design and build <span class='highlight-heading animate-highlight'>things for the web.</span>
       </h2>
     </div>
-    <h3 class='text-xl font-semibold'>Computer Science Student and Web Developer.</h3>
+    <h3 class='text-xl font-semibold'>Computer Science Graduate and Web Developer.</h3>
     <div class='mx-auto mt-4 h-[275px] w-[275px] sm:h-[350px] sm:w-[350px] md:h-[450px] md:w-[450px]'>
       <LaptopAnimate />
     </div>
