--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@plugin "@tailwindcss/typography";
+@plugin '@tailwindcss/typography';
 @variant dark (&:where(.dark, .dark *));
 @utility container {
   margin-inline: auto;
